# Taproot_Vanity_Generator

./: Cargo.toml  README.md  build.bat  build.sh
src/: main.rs
